--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "mpl_qt_viz" %}
-{% set version = "1.0.3" %}
+{% set version = load_setup_py_data().get("version") %}
 
 
 package:
@@ -15,7 +15,7 @@ build:
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
-  host:
+  build:
     - pip
     - python >=3.7
   run:
@@ -27,6 +27,10 @@ requirements:
     - scikit-image
     - scipy
     - shapely
+    
+test:
+  imports:
+    - mpl_qt_viz
 
 about:
   home: https://github.com/nanthony21/mpl_qt_viz
