--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -4,12 +4,16 @@ on: workflow_dispatch
     
 jobs:
   publish:
-    runs-on: continuumio/anaconda3
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+         auto-activate-base: true
+         activate-environment: ""
       - name: Install dependencies
         run: |
-          conda install setuptools_scm conda-build
+          conda install setuptools_scm conda-build anaconda-client
       - name: Build
         run: conda build . --output-folder ./condaDist   
       - name: publish-to-conda
