--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "mpl_qt_viz" %}
-{% set version = load_setup_py_data().get("version") %}
+{% set version = load_setup_py_data().get("version") %}  # In order for this to work we must install setuptools_scm prior to running conda-build, hopefully they'll fix that.
 
 
 package:
@@ -18,6 +18,7 @@ requirements:
   build:
     - pip
     - python >=3.7
+    - setuptools_scm
   run:
     - matplotlib-base
     - numpy
