--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
       - name: Install dependencies
-        run: conda install anaconda-client 
-      - name: publish-to-conda
-        run: anaconda upload condaDist/noarch/mpl_qt_viz*
+        run: |
+            conda install anaconda-client 
+            anaconda upload condaDist/noarch/mpl_qt_viz*
