--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
       - name: Install dependencies
+        shell: bash -l {0}
         run: |
             conda install anaconda-client 
-            bash -l {0}
             anaconda upload condaDist/noarch/mpl_qt_viz*
