--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -12,7 +12,7 @@ jobs:
           auto-activate-base: true
           activate-environment: ""
       - name: Install dependencies
-        shell: bash -l {0}
+        shell: bash
         run: |
             conda install anaconda-client 
             anaconda upload condaDist/noarch/mpl_qt_viz*
