--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -14,5 +14,6 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
+            bash -l {0}
             conda install anaconda-client 
             anaconda upload condaDist/noarch/mpl_qt_viz*
