--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -8,12 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-activate-base: true
-          activate-environment: ""
       - name: Install dependencies
-        shell: bash
+        shell: bash -l {0}
         run: |
-            bash -l
+            set -eux
             conda install anaconda-client 
+            conda list
             anaconda upload condaDist/noarch/mpl_qt_viz*
