--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -22,12 +22,13 @@ requirements:
   run:
     - matplotlib-base
     - numpy
-    - py-opencv
+    - opencv
     - pyqt
     - python >=3.7
     - scikit-image
     - scipy
     - shapely
+    - cycler
     
 test:
   imports:
